# pclights

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
firmware/: CMakeLists.txt  platformio.ini
firmware/cmake/: avr-gcc.toolchain.cmake
firmware/include/: io_config.h  sci.h  serial.h
firmware/lib/SerialStream/src/: SerialStream.h
firmware/src/: main.cpp  sci.cpp  serial.cpp
include/: animation.h  async_buffer.h  communication.h  configuration.h  protocol.h  serial.h
src/: async_buffer.cpp  configuration.cpp  main.cpp  serial.cpp
